@@ -1,21 +1,23 @@
 require 'test_helper'
 
 class PaypalTest < Test::Unit::TestCase
+  include CommStub
+
   def setup
     Base.mode = :test
     PaypalGateway.pem_file = nil
-    
+
     @amount = 100
     @gateway = PaypalGateway.new(
-                :login => 'cody', 
-                :password => 'test',
-                :pem => 'PEM'
-               )
-    
+      :login => 'cody',
+      :password => 'test',
+      :pem => 'PEM'
+    )
+
     @credit_card = credit_card('4242424242424242')
     @options = { :billing_address => address, :ip => '127.0.0.1' }
     @recurring_required_fields = {:start_date => Date.today, :frequency => :Month, :period => 'Month', :description => 'A description'}
-  end 
+  end
 
   def test_no_ip_address
     assert_raise(ArgumentError){ @gateway.purchase(@amount, @credit_card, :billing_address => address)}
@@ -66,7 +68,7 @@ class PaypalTest < Test::Unit::TestCase
     expected_header = {'X-PP-AUTHORIZATION' => 123, 'X-PAYPAL-MESSAGE-PROTOCOL' => 'SOAP11'}
     @gateway.expects(:ssl_post).with(anything, anything, expected_header).returns(successful_purchase_response)
     @gateway.expects(:add_credentials).never
- 
+
     assert @gateway.purchase(@amount, @credit_card, @options)
   end
 
@@ -80,23 +82,23 @@ class PaypalTest < Test::Unit::TestCase
 
   def test_successful_purchase
     @gateway.expects(:ssl_post).returns(successful_purchase_response)
-    
+
     assert response = @gateway.purchase(@amount, @credit_card, @options)
     assert_instance_of Response, response
     assert_success response
     assert_equal '62U664727W5914806', response.authorization
     assert response.test?
   end
-  
+
   def test_successful_reference_purchase
     @gateway.expects(:ssl_post).returns(successful_purchase_response)
     assert response = @gateway.purchase(@amount, @credit_card, @options)
     assert_instance_of Response, response
     assert_success response
     assert_equal '62U664727W5914806', response.authorization
-    
+
     ref_id = response.authorization
-    
+
     gateway2 = PaypalGateway.new(:login => 'cody', :password => 'test', :pem => 'PEM')
     gateway2.expects(:ssl_post).returns(successful_reference_purchase_response)
     assert response = gateway2.purchase(@amount, ref_id, @options)
@@ -105,16 +107,16 @@ class PaypalTest < Test::Unit::TestCase
     assert_equal '62U664727W5915049', response.authorization
     assert response.test?
   end
-  
+
   def test_failed_purchase
     @gateway.expects(:ssl_post).returns(failed_purchase_response)
-    
+
     assert response = @gateway.purchase(@amount, @credit_card, @options)
     assert_instance_of Response, response
     assert_failure response
     assert response.test?
   end
-  
+
   def test_reauthorization
     @gateway.expects(:ssl_post).returns(successful_reauthorization_response)
     response = @gateway.reauthorize(@amount, '32J876265E528623B')
@@ -122,7 +124,7 @@ class PaypalTest < Test::Unit::TestCase
     assert_equal('1TX27389GX108740X', response.authorization)
     assert response.test?
   end
-  
+
   def test_reauthorization_with_warning
     @gateway.expects(:ssl_post).returns(successful_with_warning_reauthorization_response)
     response = @gateway.reauthorize(@amount, '32J876265E528623B')
@@ -130,15 +132,15 @@ class PaypalTest < Test::Unit::TestCase
     assert_equal('1TX27389GX108740X', response.authorization)
     assert response.test?
   end
-  
+
   def test_amount_style
    assert_equal '10.34', @gateway.send(:amount, 1034)
-                                                      
+
    assert_raise(ArgumentError) do
      @gateway.send(:amount, '10.34')
    end
   end
-  
+
   def test_paypal_timeout_error
     @gateway.stubs(:ssl_post).returns(paypal_timeout_error_response)
     response = @gateway.purchase(@amount, @credit_card, @options)
@@ -147,19 +149,19 @@ class PaypalTest < Test::Unit::TestCase
     assert_equal "Timeout processing request", response.params['detail']
     assert_equal "SOAP-ENV:Server: Internal error - Timeout processing request", response.message
   end
-  
+
   def test_pem_file_accessor
     PaypalGateway.pem_file = '123456'
     gateway = PaypalGateway.new(:login => 'test', :password => 'test')
     assert_equal '123456', gateway.options[:pem]
   end
-  
+
   def test_passed_in_pem_overrides_class_accessor
     PaypalGateway.pem_file = '123456'
     gateway = PaypalGateway.new(:login => 'test', :password => 'test', :pem => 'Clobber')
     assert_equal 'Clobber', gateway.options[:pem]
   end
-  
+
   def test_ensure_options_are_transferred_to_express_instance
     PaypalGateway.pem_file = '123456'
     gateway = PaypalGateway.new(:login => 'test', :password => 'password')
@@ -169,7 +171,7 @@ class PaypalTest < Test::Unit::TestCase
     assert_equal 'password', express.options[:password]
     assert_equal '123456', express.options[:pem]
   end
-  
+
   def test_supported_countries
     assert_equal ['US'], PaypalGateway.supported_countries
   end
@@ -177,25 +179,25 @@ class PaypalTest < Test::Unit::TestCase
   def test_supported_card_types
     assert_equal [:visa, :master, :american_express, :discover], PaypalGateway.supported_cardtypes
   end
-  
+
   def test_button_source
     PaypalGateway.application_id = 'ActiveMerchant_DC'
-    
+
     xml = REXML::Document.new(@gateway.send(:build_sale_or_authorization_request, 'Test', @amount, @credit_card, {}))
     assert_equal 'ActiveMerchant_DC', REXML::XPath.first(xml, '//n2:ButtonSource').text
   end
-  
+
   def test_item_total_shipping_handling_and_tax_not_included_unless_all_are_present
     xml = @gateway.send(:build_sale_or_authorization_request, 'Authorization', @amount, @credit_card,
       :tax => @amount,
       :shipping => @amount,
       :handling => @amount
     )
-    
+
     doc = REXML::Document.new(xml)
     assert_nil REXML::XPath.first(doc, '//n2:PaymentDetails/n2:TaxTotal')
   end
-  
+
   def test_item_total_shipping_handling_and_tax
     xml = @gateway.send(:build_sale_or_authorization_request, 'Authorization', @amount, @credit_card,
       :tax => @amount,
@@ -203,90 +205,90 @@ class PaypalTest < Test::Unit::TestCase
       :handling => @amount,
       :subtotal => 200
     )
-    
+
     doc = REXML::Document.new(xml)
     assert_equal '1.00', REXML::XPath.first(doc, '//n2:PaymentDetails/n2:TaxTotal').text
   end
-  
+
   def test_should_use_test_certificate_endpoint
     gateway = PaypalGateway.new(
-                :login => 'cody', 
+                :login => 'cody',
                 :password => 'test',
                 :pem => 'PEM'
               )
     assert_equal PaypalGateway::URLS[:test][:certificate], gateway.send(:endpoint_url)
   end
-  
+
   def test_should_use_live_certificate_endpoint
     gateway = PaypalGateway.new(
-                :login => 'cody', 
+                :login => 'cody',
                 :password => 'test',
                 :pem => 'PEM'
               )
     gateway.expects(:test?).returns(false)
-      
+
     assert_equal PaypalGateway::URLS[:live][:certificate], gateway.send(:endpoint_url)
   end
-  
+
   def test_should_use_test_signature_endpoint
     gateway = PaypalGateway.new(
-                :login => 'cody', 
+                :login => 'cody',
                 :password => 'test',
                 :signature => 'SIG'
               )
-      
+
     assert_equal PaypalGateway::URLS[:test][:signature], gateway.send(:endpoint_url)
   end
-  
+
   def test_should_use_live_signature_endpoint
     gateway = PaypalGateway.new(
-                :login => 'cody', 
+                :login => 'cody',
                 :password => 'test',
                 :signature => 'SIG'
               )
     gateway.expects(:test?).returns(false)
-      
+
     assert_equal PaypalGateway::URLS[:live][:signature], gateway.send(:endpoint_url)
   end
-  
+
   def test_should_raise_argument_when_credentials_not_present
     assert_raises(ArgumentError) do
       PaypalGateway.new(:login => 'cody', :password => 'test')
     end
   end
-  
+
   def test_avs_result
     @gateway.expects(:ssl_post).returns(successful_purchase_response)
-    
+
     response = @gateway.purchase(@amount, @credit_card, @options)
     assert_equal 'X', response.avs_result['code']
   end
-     
+
   def test_cvv_result
     @gateway.expects(:ssl_post).returns(successful_purchase_response)
-    
+
     response = @gateway.purchase(@amount, @credit_card, @options)
     assert_equal 'M', response.cvv_result['code']
   end
-  
+
   def test_fraud_review
     @gateway.expects(:ssl_post).returns(fraud_review_response)
-    
+
     response = @gateway.purchase(@amount, @credit_card, @options)
     assert_success response
     assert_equal "SuccessWithWarning", response.params["ack"]
     assert_equal "Payment Pending your review in Fraud Management Filters", response.message
     assert response.fraud_review?
   end
-  
+
   def test_failed_capture_due_to_pending_fraud_review
     @gateway.expects(:ssl_post).returns(failed_capture_due_to_pending_fraud_review)
-    
+
     response = @gateway.capture(@amount, 'authorization')
     assert_failure response
     assert_equal "Transaction must be accepted in Fraud Management Filters before capture.", response.message
   end
-  
+
   # This occurs when sufficient 3rd party API permissions are not present to make the call for the user
   def test_authentication_failed_response
     @gateway.expects(:ssl_post).returns(authentication_failed_response)
@@ -295,7 +297,7 @@ class PaypalTest < Test::Unit::TestCase
     assert_equal "10002", response.params["error_codes"]
     assert_equal "You do not have permissions to make this API call", response.message
   end
-  
+
   def test_amount_format_for_jpy_currency
     @gateway.expects(:ssl_post).with(anything, regexp_matches(/n2:OrderTotal currencyID=.JPY.>1<\/n2:OrderTotal>/), {}).returns(successful_purchase_response)
     response = @gateway.purchase(100, @credit_card, @options.merge(:currency => 'JPY'))
@@ -377,10 +379,30 @@ class PaypalTest < Test::Unit::TestCase
     assert response.success?
   end
 
+  def test_mass_pay_transfer_recipient_types
+    response = stub_comms do
+      @gateway.transfer 1000, 'fred@example.com'
+    end.check_request do |endpoint, data, headers|
+      assert_no_match %r{ReceiverType}, data
+    end.respond_with(successful_purchase_response)
 
+    response = stub_comms do
+      @gateway.transfer 1000, 'fred@example.com', :receiver_type => "EmailAddress"
+    end.check_request do |endpoint, data, headers|
+      assert_match %r{<ReceiverType>EmailAddress</ReceiverType>}, data
+      assert_match %r{<ReceiverEmail>fred@example\.com</ReceiverEmail>}, data
+    end.respond_with(successful_purchase_response)
 
+    response = stub_comms do
+      @gateway.transfer 1000, 'fred@example.com', :receiver_type => "UserID"
+    end.check_request do |endpoint, data, headers|
+      assert_match %r{<ReceiverType>UserID</ReceiverType>}, data
+      assert_match %r{<ReceiverID>fred@example\.com</ReceiverID>}, data
+    end.respond_with(successful_purchase_response)
+  end
 
   private
+
   def successful_purchase_response
     <<-RESPONSE
 <?xml version="1.0" encoding="UTF-8"?>
@@ -411,7 +433,7 @@ class PaypalTest < Test::Unit::TestCase
 </SOAP-ENV:Envelope>
     RESPONSE
   end
-  
+
   def successful_reference_purchase_response
     <<-RESPONSE
 <?xml version="1.0" encoding="UTF-8"?>
@@ -442,7 +464,7 @@ class PaypalTest < Test::Unit::TestCase
 </SOAP-ENV:Envelope>
     RESPONSE
   end
-  
+
   def failed_purchase_response
     <<-RESPONSE
 <?xml version="1.0" encoding="UTF-8"?>
@@ -472,7 +494,7 @@ class PaypalTest < Test::Unit::TestCase
 </SOAP-ENV:Envelope>
     RESPONSE
   end
-  
+
   def paypal_timeout_error_response
     <<-RESPONSE
 <?xml version='1.0' encoding='UTF-8'?>
@@ -497,35 +519,35 @@ class PaypalTest < Test::Unit::TestCase
 </SOAP-ENV:Envelope>
     RESPONSE
   end
-  
+
   def successful_reauthorization_response
     <<-RESPONSE
 <?xml version="1.0" encoding="UTF-8"?>
-<SOAP-ENV:Envelope 
-  xmlns:SOAP-ENV="http://schemas.xmlsoap.org/soap/envelope/" 
-  xmlns:SOAP-ENC="http://schemas.xmlsoap.org/soap/encoding/" 
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
-  xmlns:xsd="http://www.w3.org/2001/XMLSchema" 
-  xmlns:xs="http://www.w3.org/2001/XMLSchema" 
-  xmlns:cc="urn:ebay:apis:CoreComponentTypes" 
-  xmlns:wsu="http://schemas.xmlsoap.org/ws/2002/07/utility" 
-  xmlns:saml="urn:oasis:names:tc:SAML:1.0:assertion" 
-  xmlns:ds="http://www.w3.org/2000/09/xmldsig#" 
-  xmlns:market="urn:ebay:apis:Market" 
-  xmlns:auction="urn:ebay:apis:Auction" 
-  xmlns:sizeship="urn:ebay:api:PayPalAPI/sizeship.xsd" 
-  xmlns:ship="urn:ebay:apis:ship" 
-  xmlns:wsse="http://schemas.xmlsoap.org/ws/2002/12/secext" 
-  xmlns:ebl="urn:ebay:apis:eBLBaseComponents" 
+<SOAP-ENV:Envelope
+  xmlns:SOAP-ENV="http://schemas.xmlsoap.org/soap/envelope/"
+  xmlns:SOAP-ENC="http://schemas.xmlsoap.org/soap/encoding/"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xmlns:xsd="http://www.w3.org/2001/XMLSchema"
+  xmlns:xs="http://www.w3.org/2001/XMLSchema"
+  xmlns:cc="urn:ebay:apis:CoreComponentTypes"
+  xmlns:wsu="http://schemas.xmlsoap.org/ws/2002/07/utility"
+  xmlns:saml="urn:oasis:names:tc:SAML:1.0:assertion"
+  xmlns:ds="http://www.w3.org/2000/09/xmldsig#"
+  xmlns:market="urn:ebay:apis:Market"
+  xmlns:auction="urn:ebay:apis:Auction"
+  xmlns:sizeship="urn:ebay:api:PayPalAPI/sizeship.xsd"
+  xmlns:ship="urn:ebay:apis:ship"
+  xmlns:wsse="http://schemas.xmlsoap.org/ws/2002/12/secext"
+  xmlns:ebl="urn:ebay:apis:eBLBaseComponents"
   xmlns:ns="urn:ebay:api:PayPalAPI">
   <SOAP-ENV:Header>
-    <Security 
-       xmlns="http://schemas.xmlsoap.org/ws/2002/12/secext" 
+    <Security
+       xmlns="http://schemas.xmlsoap.org/ws/2002/12/secext"
        xsi:type="wsse:SecurityType">
     </Security>
-    <RequesterCredentials xmlns="urn:ebay:api:PayPalAPI" 
+    <RequesterCredentials xmlns="urn:ebay:api:PayPalAPI"
        xsi:type="ebl:CustomSecurityHeaderType">
-       <Credentials xmlns="urn:ebay:apis:eBLBaseComponents" 
+       <Credentials xmlns="urn:ebay:apis:eBLBaseComponents"
                     xsi:type="ebl:UserIdPasswordType">
           <Username xsi:type="xs:string"></Username>
           <Password xsi:type="xs:string"></Password>
@@ -543,38 +565,38 @@ class PaypalTest < Test::Unit::TestCase
       <AuthorizationID xsi:type="ebl:AuthorizationId">1TX27389GX108740X</AuthorizationID>
     </DoReauthorizationResponse>
   </SOAP-ENV:Body>
-</SOAP-ENV:Envelope>  
+</SOAP-ENV:Envelope>
     RESPONSE
   end
-  
+
   def successful_with_warning_reauthorization_response
     <<-RESPONSE
 <?xml version="1.0" encoding="UTF-8"?>
-<SOAP-ENV:Envelope 
-  xmlns:SOAP-ENV="http://schemas.xmlsoap.org/soap/envelope/" 
-  xmlns:SOAP-ENC="http://schemas.xmlsoap.org/soap/encoding/" 
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
-  xmlns:xsd="http://www.w3.org/2001/XMLSchema" 
-  xmlns:xs="http://www.w3.org/2001/XMLSchema" 
-  xmlns:cc="urn:ebay:apis:CoreComponentTypes" 
-  xmlns:wsu="http://schemas.xmlsoap.org/ws/2002/07/utility" 
-  xmlns:saml="urn:oasis:names:tc:SAML:1.0:assertion" 
-  xmlns:ds="http://www.w3.org/2000/09/xmldsig#" 
-  xmlns:market="urn:ebay:apis:Market" 
-  xmlns:auction="urn:ebay:apis:Auction" 
-  xmlns:sizeship="urn:ebay:api:PayPalAPI/sizeship.xsd" 
-  xmlns:ship="urn:ebay:apis:ship" 
-  xmlns:wsse="http://schemas.xmlsoap.org/ws/2002/12/secext" 
-  xmlns:ebl="urn:ebay:apis:eBLBaseComponents" 
+<SOAP-ENV:Envelope
+  xmlns:SOAP-ENV="http://schemas.xmlsoap.org/soap/envelope/"
+  xmlns:SOAP-ENC="http://schemas.xmlsoap.org/soap/encoding/"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xmlns:xsd="http://www.w3.org/2001/XMLSchema"
+  xmlns:xs="http://www.w3.org/2001/XMLSchema"
+  xmlns:cc="urn:ebay:apis:CoreComponentTypes"
+  xmlns:wsu="http://schemas.xmlsoap.org/ws/2002/07/utility"
+  xmlns:saml="urn:oasis:names:tc:SAML:1.0:assertion"
+  xmlns:ds="http://www.w3.org/2000/09/xmldsig#"
+  xmlns:market="urn:ebay:apis:Market"
+  xmlns:auction="urn:ebay:apis:Auction"
+  xmlns:sizeship="urn:ebay:api:PayPalAPI/sizeship.xsd"
+  xmlns:ship="urn:ebay:apis:ship"
+  xmlns:wsse="http://schemas.xmlsoap.org/ws/2002/12/secext"
+  xmlns:ebl="urn:ebay:apis:eBLBaseComponents"
   xmlns:ns="urn:ebay:api:PayPalAPI">
   <SOAP-ENV:Header>
-    <Security 
-       xmlns="http://schemas.xmlsoap.org/ws/2002/12/secext" 
+    <Security
+       xmlns="http://schemas.xmlsoap.org/ws/2002/12/secext"
        xsi:type="wsse:SecurityType">
     </Security>
-    <RequesterCredentials xmlns="urn:ebay:api:PayPalAPI" 
+    <RequesterCredentials xmlns="urn:ebay:api:PayPalAPI"
        xsi:type="ebl:CustomSecurityHeaderType">
-       <Credentials xmlns="urn:ebay:apis:eBLBaseComponents" 
+       <Credentials xmlns="urn:ebay:apis:eBLBaseComponents"
                     xsi:type="ebl:UserIdPasswordType">
           <Username xsi:type="xs:string"></Username>
           <Password xsi:type="xs:string"></Password>
@@ -592,10 +614,10 @@ class PaypalTest < Test::Unit::TestCase
       <AuthorizationID xsi:type="ebl:AuthorizationId">1TX27389GX108740X</AuthorizationID>
     </DoReauthorizationResponse>
   </SOAP-ENV:Body>
-</SOAP-ENV:Envelope>  
+</SOAP-ENV:Envelope>
     RESPONSE
   end
-  
+
   def fraud_review_response
     <<-RESPONSE
     <?xml version="1.0" encoding="UTF-8"?>
@@ -633,7 +655,7 @@ class PaypalTest < Test::Unit::TestCase
 </SOAP-ENV:Envelope>
     RESPONSE
   end
-  
+
   def failed_capture_due_to_pending_fraud_review
     <<-RESPONSE
 <?xml version="1.0" encoding="UTF-8"?>
@@ -675,7 +697,7 @@ class PaypalTest < Test::Unit::TestCase
 </SOAP-ENV:Envelope>
     RESPONSE
   end
-  
+
   def authentication_failed_response
     <<-RESPONSE
 <?xml version="1.0" encoding="UTF-8"?>
@@ -884,7 +906,7 @@ class PaypalTest < Test::Unit::TestCase
     RESPONSE
   end
 
-  def successful_manage_recurring_payment_profile_response 
+  def successful_manage_recurring_payment_profile_response
     <<-RESPONSE
     <?xml version=\"1.0\" encoding=\"UTF-8\"?><SOAP-ENV:Envelope xmlns:SOAP-ENV=\"http://schemas.xmlsoap.org/soap/envelope/\" xmlns:SOAP-ENC=\"http://schemas.xmlsoap.org/soap/encoding/\" xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\" xmlns:xs=\"http://www.w3.org/2001/XMLSchema\" xmlns:cc=\"urn:ebay:apis:CoreComponentTypes\" xmlns:wsu=\"http://schemas.xmlsoap.org/ws/2002/07/utility\" xmlns:saml=\"urn:oasis:names:tc:SAML:1.0:assertion\" xmlns:ds=\"http://www.w3.org/2000/09/xmldsig#\" xmlns:wsse=\"http://schemas.xmlsoap.org/ws/2002/12/secext\" xmlns:ed=\"urn:ebay:apis:EnhancedDataTypes\" xmlns:ebl=\"urn:ebay:apis:eBLBaseComponents\" xmlns:ns=\"urn:ebay:api:PayPalAPI\"><SOAP-ENV:Header><Security xmlns=\"http://schemas.xmlsoap.org/ws/2002/12/secext\" xsi:type=\"wsse:SecurityType\"></Security><RequesterCredentials xmlns=\"urn:ebay:api:PayPalAPI\" xsi:type=\"ebl:CustomSecurityHeaderType\"><Credentials xmlns=\"urn:ebay:apis:eBLBaseComponents\" xsi:type=\"ebl:UserIdPasswordType\"><Username xsi:type=\"xs:string\"></Username><Password xsi:type=\"xs:string\"></Password><Signature xsi:type=\"xs:string\"></Signature><Subject xsi:type=\"xs:string\"></Subject></Credentials></RequesterCredentials></SOAP-ENV:Header>
     <SOAP-ENV:Body id=\"_0\">
